# ocean

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/commands/: safe-change.md
.claude/rules/: 00-workflow.md  arabic.md  architecture.md  commands.md  testing.md
src/: lib.rs  main.rs
src/commands/: builtin.rs  filesystem.rs  mod.rs
src/executor/: mod.rs  pipeline.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/repl/: completer.rs  mod.rs
src/utils/: arabic.rs  colors.rs  mod.rs
