[package]
name = "ocean"
version = "0.1.0"
edition = "2021"
description = "محيط - Arabic Shell | A modern shell with Arabic commands"
authors = ["Tarqeem Project <tarqeem@example.com>"]
license = "MIT"
repository = "https://github.com/osama1998H/ocean"
keywords = ["shell", "arabic", "cli", "terminal", "tarqeem"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
rustyline = "14.0"              # Line editing, history, completion
crossterm = "0.28"              # Cross-platform terminal manipulation
unicode-segmentation = "1.11"   # Arabic text segmentation
unicode-width = "0.2"           # Character width calculation (RTL)
unicode-normalization = "0.1"   # NFC normalization for Arabic
dirs = "5.0"                    # Home directory and standard paths
colored = "2.1"                 # Terminal colors
regex = "1.10"                  # For search command
walkdir = "2.4"                 # For recursive file search
arabic_reshaper = "0.4"         # Arabic letter shaping/connection (RTL handled by terminal)

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console"] }

[dev-dependencies]
assert_cmd = "2.0"              # Testing CLI applications
predicates = "3.1"              # Assertion predicates
tempfile = "3.10"               # Temporary directories for tests

[[bin]]
name = "ocean"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
